# blackwall

./: .gitignore  Cargo.toml  README.md
crates/blackwall-cli/: Cargo.toml
crates/blackwall-cli/src/: main.rs
crates/blackwall-core/: Cargo.toml
crates/blackwall-core/src/: audit.rs  circuit.rs  engine.rs  envelope.rs  lib.rs  pattern.rs  policy.rs  scoring.rs
crates/blackwall-gateway/: Cargo.toml
crates/blackwall-gateway/src/: detect.rs  escalation.rs  gateway.rs  ipc.rs  lib.rs  mcp_proxy.rs  shell_shim.rs
homebrew/: blackwall.rb
policies/: default.yaml  permissive.yaml  strict.yaml
spec/: PROTOCOL.md
website/: package-lock.json  package.json
website/src/app/: copy-command.tsx  globals.css  hero-artwork.tsx  layout.tsx  page.tsx  theme-provider.tsx  theme-toggle.tsx
