[package]
name = "blackwall-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Gateway and transport adapters for the Blackwall Protocol"

[dependencies]
blackwall-core = { version = "0.1.1", path = "../blackwall-core" }
serde_json = "1"
dirs = "5"
